--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -8,10 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/20c5629a29.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="index.css">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-<meta name="robots" content="none,noarchive"/>
 </head>
 
 <body>
@@ -57,7 +52,7 @@
                 <div class="col-12 col-md-4">
                     <div class="wcu-card p-3 mb-3">
                         <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png" class="wcu-card-image" />
-                        <h1 class="wcu-card-title mt-3">Food Service</h1>
+                        <h1 class="wcu-card-title mt-3">Hygiene food</h1>
                         <p class="wcu-card-description">
                             Experience fine dining at the comfort of your home. All our
                             orders are carefully packed and arranged to give you the nothing
@@ -306,7 +301,6 @@
             </div>
         </div>
     </div>
-<script src="index.js"></script>
 </body>
 
 </html>
