--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-light.png" class="food-munch-logo" />
-                    <h1 class="footer-section-mail-id">orderfood@foodmunch.com</h1>
+                    <img src="Foodparadise.png" class="food-paradise-logo" />
+                    <h1 class="footer-section-mail-id">orderfood@foodparadise.com</h1>
                     <p class="footer-section-address">
-                        123 Ayur Vigyan Nagar, New Delhi, India.
+                        123 Manikonda Township, Hyderabad, India.
                     </p>
                 </div>
             </div>
