--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -284,28 +285,34 @@
         </div>
     </div>
     <div class="follow-us-section pt-5 pb-5" id="followUsSection">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="follow-us-section-heading">Follow Us</h1>
-                </div>
-                <div class="col-12">
-                    <div class="d-flex flex-row justify-content-center">
-                        <div class="follow-us-icon-container">
-                            <i class="fab fa-twitter icon"></i>
-                        </div>
-                        <div class="follow-us-icon-container">
-                            <i class="fab fa-instagram icon"></i>
-                        </div>
-                        <div class="follow-us-icon-container">
-                            <i class="fab fa-facebook icon"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h1 class="follow-us-section-heading">Follow Us</h1>
+      </div>
+      <div class="col-12">
+        <div class="d-flex flex-row justify-content-center">
+          <div class="follow-us-icon-container">
+            <a href="https://twitter.com/yourprofile" target="_blank">
+              <i class="fab fa-twitter icon"></i>
+            </a>
+          </div>
+          <div class="follow-us-icon-container">
+            <a href="https://instagram.com/yourprofile" target="_blank">
+              <i class="fab fa-instagram icon"></i>
+            </a>
+          </div>
+          <div class="follow-us-icon-container">
+            <a href="https://facebook.com/yourprofile" target="_blank">
+              <i class="fab fa-facebook icon"></i>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="footer-section pt-5 pb-5">
+  </div>
+</div>
+<div class="footer-section pt-5 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
