--- a/index.html
+++ b/index.html
@@ -325,6 +325,31 @@
             </div>
         </div>
     </div>
+<script type="text/javascript">
+  window.$crisp = [];
+  window.CRISP_WEBSITE_ID = "03c4c2c4-3b15-4fb3-8289-328f3de3d9e7";
+
+  (function () {
+    var d = document;
+    var s = d.createElement("script");
+    s.src = "https://client.crisp.chat/l.js";
+    s.async = 1;
+    d.getElementsByTagName("head")[0].appendChild(s);
+  })();
+</script>
+
+<script>
+  
+  $crisp.push(["config", "theme:color", "#BB7333"]); 
+  $crisp.push(["set", "user:nickname", ["Parady"]]); 
+  $crisp.push(["do", "chat:show"]); 
+  $crisp.push([
+    "do",
+    "message:show",
+    ["text", "Hi there! 👋 I'm Parady. Need help finding something delicious?"]
+  ]);
+</script>
+
 </body>
     
 </html>
