--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 <script>
   
-  $crisp.push(["config", "theme:color", "#BB7333"]); 
+  $crisp.push(["config", "theme:color", "#FF5733"]); 
   $crisp.push(["set", "user:nickname", ["Parady"]]); 
   $crisp.push(["do", "chat:show"]); 
   $crisp.push([
