--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
             </div>
         </div>
     </div>
+<!-- Crisp Chatbot Integration for Parady -->
 <script type="text/javascript">
   window.$crisp = [];
   window.CRISP_WEBSITE_ID = "03c4c2c4-3b15-4fb3-8289-328f3de3d9e7";
@@ -339,16 +340,23 @@
 </script>
 
 <script>
-  
-  $crisp.push(["config", "theme:color", "#FF5733"]); 
-  $crisp.push(["set", "user:nickname", ["Parady"]]); 
-  $crisp.push(["do", "chat:show"]); 
-  $crisp.push([
-    "do",
-    "message:show",
-    ["text", "Hi there! 👋 I'm Parady. Need help finding something delicious?"]
-  ]);
+  window.CRISP_READY_TRIGGER = function () {
+    $crisp.push(["config", "theme:color", "#FF5733"]);
+    $crisp.push(["set", "user:nickname", ["Parady"]]);
+
+    if (!localStorage.getItem("crispGreeted")) {
+      $crisp.push([
+        "do",
+        "message:show",
+        ["text", "Hi there! 👋 I'm Parady. Need help finding something delicious and want to get help from the support?"]
+      ]);
+      localStorage.setItem("crispGreeted", "true");
+    }
+
+    $crisp.push(["do", "chat:hide"]);
+  };
 </script>
+
 
 </body>
     
