--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="shadow menu-item-card p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="menu-item-image w-100" />
+                        <img src="images/nonveg starter.png" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Non-Veg Starters</h1>
                         <a href="" class="menu-item-link">
                             View All
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="shadow menu-item-card p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-veg-starters-img.png" class="menu-item-image w-100" />
+                        <img src="images/veg starter.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Veg Starters</h1>
                         <a class="menu-item-link">
                             View All
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-soup-img.png" class="menu-item-image w-100" />
+                        <img src="images/Soup.png" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Soups</h1>
                         <a class="menu-item-link">
                             View All
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-grilled-seafood-img.png" class="menu-item-image w-100" />
+                        <img src="images/fish.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Fish & Sea food</h1>
                         <a class="menu-item-link">
                             View All
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-hyderabadi-biryani-img.png" class="menu-item-image w-100" />
+                        <img src="images/biryani.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Main Course</h1>
                         <a class="menu-item-link">
                             View All
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-mushroom-noodles-img.png" class="menu-item-image w-100" />
+                        <img src="images/noodles.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Noodles</h1>
                         <a class="menu-item-link">
                             View All
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-gluten-img.png" class="menu-item-image w-100" />
+                        <img src="images/salad.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Salads</h1>
                         <a class="menu-item-link">
                             View All
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-coffee-bourbon-img.png" class="menu-item-image w-100" />
+                        <img src="image/desert.jpg" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Desserts</h1>
                         <a class="menu-item-link">
                             View All
@@ -213,7 +213,7 @@
             <div class="row">
                 <div class="col-12 col-md-5">
                     <div class="text-center">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/healthy-food-plate-img.png" class="healthy-food-section-img" />
+                        <img src="images/meal.jpg" class="healthy-food-section-img" />
                     </div>
                 </div>
                 <div class="col-12 col-md-7">
@@ -236,7 +236,7 @@
             <div class="row">
                 <div class="col-12 col-md-5 order-1 order-md-2">
                     <div class="text-center">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/delivery-payment-section-img.png" class="delivery-and-payment-section-img" />
+                        <img src="images/10.jpg" class="delivery-and-payment-section-img" />
                     </div>
                 </div>
                 <div class="col-12 col-md-7 order-2 order-md-1">
@@ -252,10 +252,10 @@
                     </p>
                     <button class="custom-button">Order Now</button>
                     <div class="mt-3">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/visa-card-img.png" class="payment-card-img" />
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/master-card-img.png" class="payment-card-img" />
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/paypal-card-img.png" class="payment-card-img" />
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/american-express-img.png" class="payment-card-img" />
+                        <img src="images/visa.png" class="payment-card-img" />
+                        <img src="images/master.png" class="payment-card-img" />
+                        <img src="images/rupay.jpg" class="payment-card-img" />
+                        <img src="images/upi.png" class="payment-card-img" />
                     </div>
                 </div>
             </div>
@@ -272,14 +272,14 @@
                         We have a surprise gift for you
                     </p>
                     <div class="d-md-none">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="thanking-customers-section-img" />
+                        <img src="images/gift.png" class="thanking-customers-section-img" />
                     </div>
                     <div>
                         <button class="custom-button">Redeem Gift</button>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 d-none d-md-block">
-                    <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="thanking-customers-section-img" />
+                    <img src="images/gift.png" class="thanking-customers-section-img" />
                 </div>
             </div>
         </div>
