--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="Foodparadise.png" class="food-paradise-logo" />
+                <img src="Foodparadise.webp" loading="lazy" class="food-paradise-logo" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="shadow menu-item-card p-3 mb-3">
-                        <img src="images/nonveg starter.png" class="menu-item-image w-100" />
+                        <img src="images/nonveg starter.webp" width="300" height="200" loading="lazy" class="menu-item-image w-100" />
                         <h1 class="menu-card-title">Non-Veg Starters</h1>
                         <a href="" class="menu-item-link">
                             View All
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="shadow menu-item-card p-3 mb-3">
-                        <img src="images/veg starter.jpg" class="menu-item-image w-100" />
+                        <img src="images/veg starter.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Veg Starters</h1>
                         <a class="menu-item-link">
                             View All
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="images/Soup.png" class="menu-item-image w-100" />
+                        <img src="images/Soup.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Soups</h1>
                         <a class="menu-item-link">
                             View All
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="images/fish.jpg" class="menu-item-image w-100" />
+                        <img src="images/fish.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Fish & Sea food</h1>
                         <a class="menu-item-link">
                             View All
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="images/biryani.jpg" class="menu-item-image w-100" />
+                        <img src="images/biryani.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Main Course</h1>
                         <a class="menu-item-link">
                             View All
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="images/noodles.jpg" class="menu-item-image w-100" />
+                        <img src="images/noodles.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Noodles</h1>
                         <a class="menu-item-link">
                             View All
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="images/salad.jpg" class="menu-item-image w-100" />
+                        <img src="images/salad.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Salads</h1>
                         <a class="menu-item-link">
                             View All
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="menu-item-card shadow p-3 mb-3">
-                        <img src="image/desert.jpg" class="menu-item-image w-100" />
+                        <img src="images/desert.webp" width="300" height="200" loading="lazy" class="menu-item-image" />
                         <h1 class="menu-card-title">Desserts</h1>
                         <a class="menu-item-link">
                             View All
@@ -213,7 +213,7 @@
             <div class="row">
                 <div class="col-12 col-md-5">
                     <div class="text-center">
-                        <img src="images/meal.jpg" class="healthy-food-section-img" />
+                        <img src="images/meal.webp" loading="lazy" class="healthy-food-section-img" />
                     </div>
                 </div>
                 <div class="col-12 col-md-7">
@@ -252,10 +252,10 @@
                     </p>
                     <button class="custom-button">Order Now</button>
                     <div class="mt-3">
-                        <img src="images/visa.png" class="payment-card-img" />
-                        <img src="images/master.png" class="payment-card-img" />
-                        <img src="images/rupay.jpg" class="payment-card-img" />
-                        <img src="images/upi.png" class="payment-card-img" />
+                        <img src="images/visa.webp" loading="lazy" class="payment-card-img" />
+                        <img src="images/master.webp" loading="lazy" class="payment-card-img" />
+                        <img src="images/rupay.webp" loading="lazy" class="payment-card-img" />
+                        <img src="images/upi.webp" loading="lazy" class="payment-card-img" />
                     </div>
                 </div>
             </div>
@@ -272,14 +272,14 @@
                         We have a surprise gift for you
                     </p>
                     <div class="d-md-none">
-                        <img src="images/gift.png" class="thanking-customers-section-img" />
+                        <img src="images/gift.webp" loading="lazy" class="thanking-customers-section-img" />
                     </div>
                     <div>
                         <button class="custom-button">Redeem Gift</button>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 d-none d-md-block">
-                    <img src="images/gift.png" class="thanking-customers-section-img" />
+                    <img src="images/gift.webp" loading="lazy" class="thanking-customers-section-img" />
                 </div>
             </div>
         </div>
@@ -316,7 +316,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <img src="Foodparadise.png" class="food-paradise-logo" />
+                    <img src="Foodparadise.webp" loading="lazy" class="food-paradise-logo" />
                     <h1 class="footer-section-mail-id">orderfood@foodparadise.com</h1>
                     <p class="footer-section-address">
                         123 Manikonda Township, Hyderabad, India.
