--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="row">
                 <div class="col-12 col-md-5 order-1 order-md-2">
                     <div class="text-center">
-                        <img src="images/10.jpg" class="delivery-and-payment-section-img" />
+                        <img src="images/10.webp" class="delivery-and-payment-section-img" />
                     </div>
                 </div>
                 <div class="col-12 col-md-7 order-2 order-md-1">
